--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
     "require": {
         "php": ">=5.6"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.0",
+        "fastd/http": "3.0.x-dev"
+    },
     "autoload": {
         "psr-4": {
             "FastD\\Session\\": "src"
