--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
         }
     ],
     "require": {
-        "php": ">=5.6"
+        "php": ">=5.6",
+        "fastd/storage": "2.0.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0",
-        "fastd/http": "3.0.x-dev"
+        "phpunit/phpunit": "^5.0"
     },
     "autoload": {
         "psr-4": {
