--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
     ],
     "require": {
         "php": ">=5.6",
-        "fastd/storage": "3.0.x-dev"
+        "fastd/http": "^3.0",
+        "fastd/utils": "^0.1",
+        "symfony/cache": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0"
@@ -16,6 +18,9 @@
     "autoload": {
         "psr-4": {
             "FastD\\Session\\": "src"
-        }
+        },
+        "files": [
+            "helpers.php"
+        ]
     }
 }
