--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,13 @@
         "php": ">=5.6",
         "fastd/http": "^3.0",
         "fastd/utils": "^0.1",
-        "symfony/cache": "^3.0"
+        "symfony/cache": "^3.0",
+        "hanson/face": "^2.0",
+        "easyswoole/cache": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0"
+        "phpunit/phpunit": "^5.0",
+        "predis/predis": "^1.1"
     },
     "autoload": {
         "psr-4": {
